[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "undefined"
author = "Matthias Bussonnier"
author-email = "bussonniermatthias@gmail.com"
home-page = "https://github.com/Carreau/undefined"
classifiers = ["License :: OSI Approved :: MIT License"]
description-file = "readme.md"
requires-python = ">=3.4"

